# AddressablesToolsPy

./: README.md  pyproject.toml
docs/superpowers/plans/: 2026-07-04-addressablestools-rewrite.md
docs/superpowers/specs/: 2026-07-04-addressablestools-rewrite-design.md
src/: AddressablesTools.py
src/AddressablesTools/: AddressablesCatalogFileParser.py  CatalogFileType.py  Const.py  __init__.py  classes.py  constants.py  parser.py
src/AddressablesTools/Binary/: ContentCatalogDataBinaryHeader.py
src/AddressablesTools/Catalog/: ClassJsonObject.py  ContentCatalogData.py  ObjectInitializationData.py  ResourceLocation.py  SerializedObjectDecoder.py  SerializedType.py  WrappedSerializedObject.py
src/AddressablesTools/Classes/: AssetBundleRequestOptions.py  Hash128.py  TypeReference.py
src/AddressablesTools/JSON/: ContentCatalogDataJson.py  ObjectInitializationDataJson.py  SerializedTypeJson.py
src/AddressablesTools/Reader/: BinaryReader.py  CatalogBinaryReader.py
src/addressablestools/: __init__.py  binary.py  catalog.py  decoder.py  exceptions.py  models.py  parser.py
src/addressablestools/Catalog/: SerializedObjectDecoder.py  SerializedType.py  WrappedSerializedObject.py
src/addressablestools/Classes/: AssetBundleRequestOptions.py
src/addressablestools/JSON/: SerializedTypeJson.py
src/addressablestools/Reader/: BinaryReader.py
tests/: conftest.py  test_binary_parser.py  test_binary_reader.py  test_compat_api.py  test_decoder.py  test_json_parser.py  test_models.py  test_packaging.py  test_parse.py  test_public_api.py
tests/samples/: catalog.json
