[project]
name = "addressablestools"
version = "0.2.0"
authors = [{ name = "Jitsu", email = "jitsu233@gmail.com" }]
description = "Python library for reading Unity Addressables catalog files"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
dependencies = []

[project.urls]
"Homepage" = "https://github.com/anosu/AddressablesToolsPy"
"Bug Reports" = "https://github.com/anosu/AddressablesToolsPy/issues"
"Funding" = "https://donate.pypi.org"
"Source" = "https://github.com/anosu/AddressablesToolsPy"

[dependency-groups]
dev = ["pytest>=8.3.5", "ruff>=0.11.7"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100
